Fix volume slider: enhance contrast and adjust handle visibility

--- a/cinnamon-Hacker/files/cinnamon-Hacker/cinnamon/cinnamon.css
+++ b/cinnamon-Hacker/files/cinnamon-Hacker/cinnamon/cinnamon.css
@@ -923,7 +923,7 @@ StScrollBar {
 .menu-favorites-box {
   padding: 10px;
   transition-duration: 300ms;
-  background-color: gba(0, 0, 0, 0.5);
+  background-color: rgba(10, 20, 10, 0.9);
   border: 1px solid #006400;
   border-radius: 6px; }
 
@@ -932,7 +932,7 @@ StScrollBar {
   border: 1px solid rgba(0, 100, 0, 1);
   border-radius: 6px; }
   .menu-favorites-button:hover {
-    background-color: rgba(0, 48, 0, 0.7);
+    background-color: #006400;
     border: 1px solid rgba(0, 100, 0, 1); }
 
 .menu-places-box {
@@ -956,10 +956,10 @@ StScrollBar {
   .menu-application-button-selected {
     padding: 7px;
     color: #00ff00;
-    background-color: rgba(0, 48, 0, 0.7);
+    background-color: #00ff00;
     border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 6px; }
-  .menu-application-button-selected:highlighted {
+    .menu-application-button-selected:highlighted {
       font-weight: bold; }
   .menu-application-button-label:ltr {
     padding-left: 5px; }
@@ -971,8 +971,8 @@ StScrollBar {
   border: 1px solid rgba(0, 100, 0, 1); }
   .menu-category-button-selected {
     padding: 7px;
-    color: #00ff00;
-    background-color: rgba(0, 48, 0, 0.7);
+    color: #005000;
+    background-color: #003000;
     border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 6px; }
   .menu-category-button-greyed {
@@ -982,7 +982,7 @@ StScrollBar {
   .menu-category-button:hover {
     padding: 7px;
     color: #00ff00;
-    background-color: rgba(0, 48, 0, 0.5);
+    background-color: #003000;
     border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 6px; }
   .menu-category-button-label:ltr {
@@ -1405,12 +1405,12 @@ StScrollBar {
   padding: 0;
   border: none;
   -slider-height: 0.5em;
-  -slider-background-color: #006400;
+  -slider-background-color: #001100;
   -slider-border-color: rgba(0, 0, 0, 0);
-  -slider-active-background-color: #009900;;
+  -slider-active-background-color: #00FF00;;
   -slider-active-border-color: rgba(0, 0, 0, 0);
   -slider-border-width: 0px;
-  -slider-handle-radius: 0px; }
+  -slider-handle-radius: 2px; }
 
 .panel-top .workspace-switcher,
 .panel-bottom .workspace-switcher {
